# obsidian-media

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
obsidian_media/: __init__.py  extension.py
