# SPDX-FileCopyrightText: © 2024 Serhii “GooRoo” Olendarenko
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "obsidian-media"
version = "1.0.0"
description = "A plugin for Python-Markdown that allows you to embed media files as in Obsidian."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Plugins",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Topic :: Documentation",
	"Topic :: Software Development :: Documentation",
	"Topic :: Text Processing :: Markup :: HTML",
	"Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = ["markdown>=3.7"]

[project.urls]
Homepage = "https://github.com/GooRoo/obsidian-media"
Issues = "https://github.com/GooRoo/obsidian-media/issues"
Repository = "https://github.com/GooRoo/obsidian-media.git"

[project.entry-points."markdown.extensions"]
obsidian_media = "obsidian_media.extension:ObsidianMediaExtension"

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
